--- a/index.html
+++ b/index.html
@@ -32,12 +32,12 @@
 				<!-- Thumbnail -->
 					<section id="thumbnails">
 						<article>
-							<a class="thumbnail" href="images/fulls/vanilla_ice.jpg" data-position="left center"><img src="images/thumbs/vanilla_ice.jpg" alt="" /></a>
+							<a class="thumbnail" href="images/fulls/vanilla_ice.jpg" data-position="left center"><img src="images/thumbs/vanilla_ice.jpg" alt="vanilla icecream" /></a>
 							<h2>Diam tempus accumsan</h2>
 							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
 						</article>
 						<article>
-							<a class="thumbnail" href="images/fulls/02.jpg"><img src="images/thumbs/02.jpg" alt="" /></a>
+							<a class="thumbnail" href="images/fulls/choc_ice.jpg"><img src="images/thumbs/choc_ice.jpg" alt="chocolate ice cream" /></a>
 							<h2>Vivamus convallis libero</h2>
 							<p>Sed velit lacus, laoreet at venenatis convallis in lorem tincidunt.</p>
 						</article>
