--- a/index.html
+++ b/index.html
@@ -37,12 +37,12 @@
 							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
 						</article>
 						<article>
-							<a class="thumbnail" href="images/fulls/choc_ice.jpg"><img src="images/thumbs/choc_ice.jpg" alt="chocolate ice cream" /></a>
+							<a class="thumbnail" href="images/fulls/choc_ice.jpg"><img src="images/thumbs/choc_ice.jpg" alt="chocolate icecream" /></a>
 							<h2>Vivamus convallis libero</h2>
 							<p>Sed velit lacus, laoreet at venenatis convallis in lorem tincidunt.</p>
 						</article>
 						<article>
-							<a class="thumbnail" href="images/fulls/03.jpg" data-position="top center"><img src="images/thumbs/03.jpg" alt="" /></a>
+							<a class="thumbnail" href="images/fulls/strawberry_ice.jpg" data-position="top center"><img src="images/thumbs/strawberry_ice.jpg" alt="strawberry icecream" /></a>
 							<h2>Nec accumsan enim felis</h2>
 							<p>Maecenas eleifend tellus ut turpis eleifend, vitae pretium faucibus.</p>
 						</article>
