--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 							<p>Tristique in nulla vel congue. Sed sociis natoque parturient nascetur.</p>
 						</article>
 						<article>
-							<a class="thumbnail" href="images/fulls/05.jpg" data-position="top center"><img src="images/thumbs/05.jpg" alt="" /></a>
+							<a class="thumbnail" href="images/fulls/lemon_ice.jpg" data-position="top center"><img src="images/thumbs/lemon_ice.jpg" alt="lemon icecream" /></a>
 							<h2>Nullam vitae nunc vulputate</h2>
 							<p>In pellentesque cursus velit id posuere. Donec vehicula nulla.</p>
 						</article>
