--- a/index.html
+++ b/index.html
@@ -57,22 +57,22 @@
 							<p>In pellentesque cursus velit id posuere. Donec vehicula nulla.</p>
 						</article>
 						<article>
-							<a class="thumbnail" href="images/fulls/06.jpg"><img src="images/thumbs/06.jpg" alt="" /></a>
+							<a class="thumbnail" href="images/fulls/coffee_ice.avif"><img src="images/thumbs/coffee_ice.avif" alt="coffee icecream" /></a>
 							<h2>Phasellus magna faucibus</h2>
 							<p>Nulla dignissim libero maximus tellus varius dictum ut posuere magna.</p>
 						</article>
 						<article>
-							<a class="thumbnail" href="images/fulls/07.jpg"><img src="images/thumbs/07.jpg" alt="" /></a>
+							<a class="thumbnail" href="images/fulls/cookie_ice.jpg"><img src="images/thumbs/cookie_ice.jpg" alt="cookie icecream" /></a>
 							<h2>Proin quis mauris</h2>
 							<p>Etiam ultricies, lorem quis efficitur porttitor, facilisis ante orci urna.</p>
 						</article>
 						<article>
-							<a class="thumbnail" href="images/fulls/08.jpg"><img src="images/thumbs/08.jpg" alt="" /></a>
+							<a class="thumbnail" href="images/fulls/mango_ice.webp"><img src="images/thumbs/mango_ice.webp" alt="mango ice cream" /></a>
 							<h2>Gravida quis varius enim</h2>
 							<p>Nunc egestas congue lorem. Nullam dictum placerat ex sapien tortor mattis.</p>
 						</article>
 						<article>
-							<a class="thumbnail" href="images/fulls/09.jpg"><img src="images/thumbs/09.jpg" alt="" /></a>
+							<a class="thumbnail" href="images/fulls/raspberry_ice.jpg"><img src="images/thumbs/raspberry_ice.jpg" alt="raspberry icecream" /></a>
 							<h2>Morbi eget vitae adipiscing</h2>
 							<p>In quis vulputate dui. Maecenas metus elit, dictum praesent lacinia lacus.</p>
 						</article>
