--- a/index.html
+++ b/index.html
@@ -77,17 +77,17 @@
 							<p>In quis vulputate dui. Maecenas metus elit, dictum praesent lacinia lacus.</p>
 						</article>
 						<article>
-							<a class="thumbnail" href="images/fulls/10.jpg"><img src="images/thumbs/10.jpg" alt="" /></a>
+							<a class="thumbnail" href="images/fulls/walnut_ice.jpg"><img src="images/thumbs/walnut_ice.jpg" alt="walnut ice cream" /></a>
 							<h2>Habitant tristique senectus</h2>
 							<p>Vestibulum ante ipsum primis in faucibus orci luctus ac tincidunt dolor.</p>
 						</article>
 						<article>
-							<a class="thumbnail" href="images/fulls/11.jpg"><img src="images/thumbs/11.jpg" alt="" /></a>
+							<a class="thumbnail" href="images/fulls/cotton candy_ice.jpg"><img src="images/thumbs/cotton candy_ice.jpg" alt="cotton candy icecream" /></a>
 							<h2>Pharetra ex non faucibus</h2>
 							<p>Ut sed magna euismod leo laoreet congue. Fusce congue enim ultricies.</p>
 						</article>
 						<article>
-							<a class="thumbnail" href="images/fulls/12.jpg"><img src="images/thumbs/12.jpg" alt="" /></a>
+							<a class="thumbnail" href="images/fulls/mint cc_ice.webp"><img src="images/thumbs/mint cc_ice.webp" alt="mint chocolate chip icecream" /></a>
 							<h2>Mattis lorem sodales</h2>
 							<p>Feugiat auctor leo massa, nec vestibulum nisl erat faucibus, rutrum nulla.</p>
 						</article>
