--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 					<section id="thumbnails">
 						<article>
 							<a class="thumbnail" href="images/fulls/vanilla_ice.jpg" data-position="left center"><img src="images/thumbs/vanilla_ice.jpg" alt="vanilla icecream" /></a>
-							<h2>Diam tempus accumsan</h2>
+							<h2>vanilla icecream</h2>
 							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
 						</article>
 						<article>
