--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Lens by HTML5 UP</title>
+		<title>ice cream flavors</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -32,64 +32,64 @@
 				<!-- Thumbnail -->
 					<section id="thumbnails">
 						<article>
-							<a class="thumbnail" href="images/fulls/vanilla_ice.jpg" data-position="left center"><img src="images/thumbs/vanilla_ice.jpg" alt="vanilla icecream" /></a>
-							<h2>vanilla icecream</h2>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+							<a class="thumbnail" href="images/fulls/vanilla_ice.jpg" data-position="left center"><img src="images/thumbs/vanilla_ice.jpg" alt="vanilla ice cream" /></a>
+							<h2>vanilla ice cream</h2>
+							<p>famous icecream flavor</p>
 						</article>
 						<article>
-							<a class="thumbnail" href="images/fulls/choc_ice.jpg"><img src="images/thumbs/choc_ice.jpg" alt="chocolate icecream" /></a>
-							<h2>Vivamus convallis libero</h2>
-							<p>Sed velit lacus, laoreet at venenatis convallis in lorem tincidunt.</p>
+							<a class="thumbnail" href="images/fulls/choc_ice.jpg"><img src="images/thumbs/choc_ice.jpg" alt="chocolate ice cream" /></a>
+							<h2>chocolate ice cream</h2>
+							<p>famous ice cream flavor</p>
 						</article>
 						<article>
-							<a class="thumbnail" href="images/fulls/strawberry_ice.jpg" data-position="top center"><img src="images/thumbs/strawberry_ice.jpg" alt="strawberry icecream" /></a>
-							<h2>Nec accumsan enim felis</h2>
-							<p>Maecenas eleifend tellus ut turpis eleifend, vitae pretium faucibus.</p>
+							<a class="thumbnail" href="images/fulls/strawberry_ice.jpg" data-position="top center"><img src="images/thumbs/strawberry_ice.jpg" alt="strawberry ice cream" /></a>
+							<h2>strawberry ice cream</h2>
+							<p>famous ice cream flavor</p>
 						</article>
 						<article>
-							<a class="thumbnail" href="images/fulls/pistachio_ice.jpg"><img src="images/thumbs/pistachio_ice.jpg" alt="pistachio icecream" /></a>
-							<h2>Donec maximus nisi eget</h2>
-							<p>Tristique in nulla vel congue. Sed sociis natoque parturient nascetur.</p>
+							<a class="thumbnail" href="images/fulls/pistachio_ice.jpg"><img src="images/thumbs/pistachio_ice.jpg" alt="pistachio ice cream" /></a>
+							<h2>pistachio ice cream</h2>
+							<p>famous ice cream flavor</p>
 						</article>
 						<article>
-							<a class="thumbnail" href="images/fulls/lemon_ice.jpg" data-position="top center"><img src="images/thumbs/lemon_ice.jpg" alt="lemon icecream" /></a>
-							<h2>Nullam vitae nunc vulputate</h2>
-							<p>In pellentesque cursus velit id posuere. Donec vehicula nulla.</p>
+							<a class="thumbnail" href="images/fulls/lemon_ice.jpg" data-position="top center"><img src="images/thumbs/lemon_ice.jpg" alt="lemon ice cream" /></a>
+							<h2>lemon ice cream</h2>
+							<p>famous ice cream flavor</p>
 						</article>
 						<article>
-							<a class="thumbnail" href="images/fulls/coffee_ice.avif"><img src="images/thumbs/coffee_ice.avif" alt="coffee icecream" /></a>
-							<h2>Phasellus magna faucibus</h2>
-							<p>Nulla dignissim libero maximus tellus varius dictum ut posuere magna.</p>
+							<a class="thumbnail" href="images/fulls/coffee_ice.avif"><img src="images/thumbs/coffee_ice.avif" alt="coffee ice cream" /></a>
+							<h2>coffee ice cream</h2>
+							<p>famous ice cream flavor</p>
 						</article>
 						<article>
-							<a class="thumbnail" href="images/fulls/cookie_ice.jpg"><img src="images/thumbs/cookie_ice.jpg" alt="cookie icecream" /></a>
-							<h2>Proin quis mauris</h2>
-							<p>Etiam ultricies, lorem quis efficitur porttitor, facilisis ante orci urna.</p>
+							<a class="thumbnail" href="images/fulls/cookie_ice.jpg"><img src="images/thumbs/cookie_ice.jpg" alt="cookie ice cream" /></a>
+							<h2>cookie ice cream</h2>
+							<p>famous ice cream flavor</p>
 						</article>
 						<article>
 							<a class="thumbnail" href="images/fulls/mango_ice.webp"><img src="images/thumbs/mango_ice.webp" alt="mango ice cream" /></a>
-							<h2>Gravida quis varius enim</h2>
-							<p>Nunc egestas congue lorem. Nullam dictum placerat ex sapien tortor mattis.</p>
+							<h2>mango ice cream</h2>
+							<p>famous ice cream flavor</p>
 						</article>
 						<article>
-							<a class="thumbnail" href="images/fulls/raspberry_ice.jpg"><img src="images/thumbs/raspberry_ice.jpg" alt="raspberry icecream" /></a>
-							<h2>Morbi eget vitae adipiscing</h2>
-							<p>In quis vulputate dui. Maecenas metus elit, dictum praesent lacinia lacus.</p>
+							<a class="thumbnail" href="images/fulls/raspberry_ice.jpg"><img src="images/thumbs/raspberry_ice.jpg" alt="raspberry ice cream" /></a>
+							<h2>raspberry ice cream</h2>
+							<p>famous ice cream flavor</p>
 						</article>
 						<article>
 							<a class="thumbnail" href="images/fulls/walnut_ice.jpg"><img src="images/thumbs/walnut_ice.jpg" alt="walnut ice cream" /></a>
-							<h2>Habitant tristique senectus</h2>
-							<p>Vestibulum ante ipsum primis in faucibus orci luctus ac tincidunt dolor.</p>
+							<h2>walnut ice cream</h2>
+							<p>famous ice cream flavor</p>
 						</article>
 						<article>
-							<a class="thumbnail" href="images/fulls/cotton candy_ice.jpg"><img src="images/thumbs/cotton candy_ice.jpg" alt="cotton candy icecream" /></a>
-							<h2>Pharetra ex non faucibus</h2>
-							<p>Ut sed magna euismod leo laoreet congue. Fusce congue enim ultricies.</p>
+							<a class="thumbnail" href="images/fulls/cotton candy_ice.jpg"><img src="images/thumbs/cotton candy_ice.jpg" alt="cotton candy ice cream" /></a>
+							<h2>cottom candy ice cream</h2>
+							<p>famous ice cream flavor</p>
 						</article>
 						<article>
-							<a class="thumbnail" href="images/fulls/mint cc_ice.webp"><img src="images/thumbs/mint cc_ice.webp" alt="mint chocolate chip icecream" /></a>
-							<h2>Mattis lorem sodales</h2>
-							<p>Feugiat auctor leo massa, nec vestibulum nisl erat faucibus, rutrum nulla.</p>
+							<a class="thumbnail" href="images/fulls/mint cc_ice.webp"><img src="images/thumbs/mint cc_ice.webp" alt="mint chocolate chip ice cream" /></a>
+							<h2>mint chocolate chip ice cream</h2>
+							<p>famous ice cream flavor</p>
 						</article>
 					</section>
 
