--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 				<!-- Header -->
 					<header id="header">
-						<h1>Lens</h1>
+						<h1>ice cream flavors!</h1>
 						<p>some nice ice cream flavors :D<a href="kasper.noemi@johak.at"></a></a></p>
 						<ul class="icons">
 							<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
