--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 				<!-- Header -->
 					<header id="header">
 						<h1>ice cream flavors!</h1>
-						<p>some nice ice cream flavors :D<a href="kasper.noemi@johak.at"></a></a></p>
+						<p>some nice ice cream flavors :D<a href="kasper.noemi@johak.at">my E-mail :3</a></a></p>
 						<ul class="icons">
 							<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 							<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
