--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 							<p>famous ice cream flavor</p>
 						</article>
 						<article>
-							<a class="thumbnail" href="images/fulls/cottoncandy_ice.jpg"><img src="images/thumbs/cotton candy_ice.jpg" alt="cotton candy ice cream" /></a>
+							<a class="thumbnail" href="images/fulls/cottoncandy_ice.jpg"><img src="images/thumbs/cottoncandy_ice.jpg" alt="cotton candy ice cream" /></a>
 							<h2>cottom candy ice cream</h2>
 							<p>famous ice cream flavor</p>
 						</article>
