--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 							<p>famous ice cream flavor</p>
 						</article>
 						<article>
-							<a class="thumbnail" href="images/fulls/mint cc_ice.webp"><img src="images/thumbs/mint cc_ice.webp" alt="mint chocolate chip ice cream" /></a>
+							<a class="thumbnail" href="images/fulls/mint.jpg"><img src="images/thumbs/mint.jpg" alt="mint chocolate chip ice cream" /></a>
 							<h2>mint chocolate chip ice cream</h2>
 							<p>famous ice cream flavor</p>
 						</article>
